# pyngsild

./: README.md  coingecko_btc_cap_sample.json  company_entity_sample.json  pyproject.toml
.github/workflows/: ci.yml
examples/: api_consumer_1.py  api_consumer_2.py
src/pyngsild/: __init__.py  constants.py  ftpclient.py
src/pyngsild/agent/: __init__.py  processor.py  stats.py
src/pyngsild/agent/bg/: __init__.py  http_rest.py  http_upload.py  mqtt.py  scheduler.py  udp.py  watchdog.py
src/pyngsild/sink/: __init__.py  ngsi.py
src/pyngsild/source/: __init__.py  moresources.py  sourceftp.py  sourcemqtt.py
src/pyngsild/utils/: mqttclient.py  stream.py
tests/: test_agent.py  test_ftpclient.py  test_http_rest_agent.py  test_http_rest_agent_2.py  test_http_upload_agent.py  test_mqttclient.py  test_source json.py  test_source xml.py  test_source.py  test_source_dataframe.py  test_source_ftp.py  test_source_mqtt.py  test_source_msexcel.py  test_source_register.py  test_stream.py
tests/data/: books.xml  users_sample.json
