[tool.poetry]
name = "pyngsild"
version = "0.1.0"
description = "A Python data-centric framework whose goal is to ease and speed up the development of NGSI-LD agents"
authors = ["fbattello <fabien.battello@orange.com>"]
license = "Apache 2.0"
readme="README.md"
homepage = "https://github.com/Orange-OpenSource/pyngsild"
keywords = ["Fiware", "NGSI", "NGSI-LD", "NGSI Agent"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[tool.poetry.dependencies]
python = "^3.10"
more-itertools = "^8.10.0"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
python-multipart = "^0.0.5"
pandas = "^1.3.4"
xmltodict = "^0.12.0"
openpyxl = "^3.0.9"
paho-mqtt = "^1.6.1"
shortuuid = "^1.0.8"
schedule = "^1.1.0"
watchgod = "^0.7"
ngsildclient = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.10b0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
